--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
   <meta name="theme-color" content="#4e8ef7">
 
 
- <script src="http://maps.google.com/maps/api/js?key=AIzaSyC8_aehwvta0ATqFTuk6706EdMko_cLIEQ"></script>
+ <script src="http://maps.google.com/maps/api/js?key=AIzaSyC8_aehwvta0ATqFTuk6706EdMko_cLIEQ&sensor=false&callback=initialize"></script>
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
