Usability changes and info buttons
Usability changes and info buttons

--- a/src/pages/add-farm/add-farm.html
+++ b/src/pages/add-farm/add-farm.html
@@ -2,6 +2,13 @@
 
   <ion-navbar color="dark">
     <ion-title>Add Farm</ion-title>
+
+    <ion-buttons end>
+      <button ion-button icon-only (click)="info()">
+        <ion-icon name="information-circle"></ion-icon>
+      </button>
+      
+     </ion-buttons>
   </ion-navbar>
 
 </ion-header>
