--- a/src/pages/all-cropinfo/all-cropinfo.html
+++ b/src/pages/all-cropinfo/all-cropinfo.html
@@ -6,6 +6,10 @@
     </ion-title>
 
     <ion-buttons end>
+<button ion-button icon-only (click)="info()">
+        <ion-icon name="information-circle"></ion-icon>
+      </button>
+
       <button ion-button icon-only (click)="addCropInfo()">
         <ion-icon name="add"></ion-icon>
       </button>
