--- a/src/pages/crop-history/crop-history.html
+++ b/src/pages/crop-history/crop-history.html
@@ -11,6 +11,12 @@
       Crops History
     </ion-title>
 
+    <ion-buttons end>
+      <button ion-button icon-only (click)="info()">
+        <ion-icon name="information-circle"></ion-icon>
+      </button>
+      
+     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
