--- a/src/pages/add-irrigation-zone/add-irrigation-zone.html
+++ b/src/pages/add-irrigation-zone/add-irrigation-zone.html
@@ -2,6 +2,12 @@
 
   <ion-navbar color="dark">
     <ion-title>Irrigation Zone</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="info()">
+        <ion-icon name="information-circle"></ion-icon>
+      </button>
+      
+     </ion-buttons>
   </ion-navbar>
 
 </ion-header>
