--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -2,10 +2,13 @@
   <ion-navbar color="dark">
  
     <ion-title>Add</ion-title>
-    <!-- <ion-buttons end>
-      <button ion-button icon-only (click)= "closeModal1()">
-        <ion-icon name="close"></ion-icon></button>
-    </ion-buttons> -->
+
+    <ion-buttons end>
+      <button ion-button icon-only (click)="info()">
+        <ion-icon name="information-circle"></ion-icon>
+      </button>
+      
+     </ion-buttons>
 
   </ion-navbar>
 </ion-header>
