--- a/src/pages/daily-rec/daily-rec.html
+++ b/src/pages/daily-rec/daily-rec.html
@@ -12,9 +12,14 @@
     </ion-title>
 
     <ion-buttons end>
+      <button ion-button icon-only (click)="info()">
+        <ion-icon name="information-circle"></ion-icon>
+      </button>
+      
       <button ion-button icon-only (click)="cropHistory()">
         <ion-icon name="calendar"></ion-icon>
       </button>
+
     </ion-buttons>
 
   </ion-navbar>
