--- a/src/pages/add-irrigation-zone/add-irrigation-zone.html
+++ b/src/pages/add-irrigation-zone/add-irrigation-zone.html
@@ -34,11 +34,12 @@
 </ion-item>
 
 <ion-item>
-  <ion-label floating>Irrigation Efficiency (%)</ion-label>
-          <ion-input type="number" max="100" min="0" step="1" [(ngModel)]="zoneInfo.irrigationefficiency" name="irrigationEff" required></ion-input>
+  <ion-label stacked>Irrigation Efficiency (%) 
+  <br>minimum 50%</ion-label>
+          <ion-input type="number" max="100" min="50" step="1" [(ngModel)]="zoneInfo.irrigationefficiency" name="irrigationEff" required></ion-input>
 </ion-item>
 
-<button ion-button round (click)="addIrrigationZone()" block [disabled] = "!formCtrl.form.valid" >Add Zone</button>
+<button ion-button round (click)="addIrrigationZone()" block [disabled] = "!formCtrl.form.valid || zoneInfo.irrigationefficiency < 50" >Add Zone</button>
 
 </form>
 
