Sliding error, temp fix

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -58,10 +58,10 @@
 
           </ion-item>
           <ion-item-options>
-            <button ion-button icon-only (click)="editFarm(farm)" color="light">
+            <button  icon-only (click)="editFarm(farm)" color="light">
                 <ion-icon name="paper"></ion-icon>
             </button>
-            <button ion-button icon-only (click)="deleteFarm(farm)" color="danger">
+            <button  icon-only (click)="deleteFarm(farm)" color="danger">
                 <ion-icon name="trash"></ion-icon>
             </button>
           </ion-item-options>
@@ -74,10 +74,10 @@
               {{zone.izname}}
             </ion-item>
             <ion-item-options>
-                <button ion-button icon-only (click)="editZone(zone)" color="light">
+                <button  icon-only (click)="editZone(zone)" color="light">
                     <ion-icon name="paper"></ion-icon>
                 </button>
-                <button ion-button icon-only (click)="deleteZone(zone)" color="danger">
+                <button  icon-only (click)="deleteZone(zone)" color="danger">
                     <ion-icon name="trash"></ion-icon>
                 </button>
             </ion-item-options>
@@ -89,7 +89,7 @@
               {{crop.cropname}}
             </ion-item>
             <ion-item-options>
-                <button ion-button icon-only (click)="deleteCrop(crop)" color="danger">
+                <button  icon-only (click)="deleteCrop(crop)" color="danger">
                     <ion-icon name="trash"></ion-icon>
                 </button>
             </ion-item-options>
