--- a/src/pages/edit-farm/edit-farm.html
+++ b/src/pages/edit-farm/edit-farm.html
@@ -39,31 +39,33 @@
 
 <div #map id="map"></div>
 
-<ion-item>
-  <ion-label> Master Control</ion-label>
-  <ion-select [(ngModel)]="mastercontrol.controlid" (ionChange)="getIP()">
-    <ion-option *ngFor="let mc of mastercontrols" value="{{mc.controlid}}">
-      #{{mc.controlid}} // {{mc.ipaddress}}
-    </ion-option>
-    <ion-option  value="new">
-      New MasterControl
-    </ion-option>
-  </ion-select>
-</ion-item>
-<div *ngIf="mastercontrol.controlid">
-  <ion-item >
-     <ion-label floating>Static IP Address</ion-label>
-     <ion-input type="text" [(ngModel)]="mastercontrol.ipaddress" name="ipAddress" required></ion-input>
-     
+<div *ngIf="this.auth.isHardware()">
+  <ion-item>
+    <ion-label> Master Control</ion-label>
+    <ion-select [(ngModel)]="mastercontrol.controlid" (ionChange)="getIP()">
+      <ion-option *ngFor="let mc of mastercontrols" value="{{mc.controlid}}">
+        #{{mc.controlid}} // {{mc.ipaddress}}
+      </ion-option>
+      <ion-option  value="new">
+        New MasterControl
+      </ion-option>
+    </ion-select>
   </ion-item>
-  <ion-buttons *ngIf="mastercontrol.controlid != 'new'">
-    <button  ion-button round (click)="editMasterControl()">
-    <ion-icon name="paper"></ion-icon> Control</button>
-    <button  ion-button round (click)="showConfirmDelete()" color="danger">
-    <ion-icon name="trash"></ion-icon> Control</button>
-  </ion-buttons>
-   <button *ngIf="mastercontrol.controlid==='new'" ion-button round (click)="addMasterControl()">
-   <ion-icon name="add"></ion-icon> Control</button>
+  <div *ngIf="mastercontrol.controlid">
+    <ion-item >
+       <ion-label floating>Static IP Address</ion-label>
+       <ion-input type="text" [(ngModel)]="mastercontrol.ipaddress" name="ipAddress" required></ion-input>
+       
+    </ion-item>
+    <ion-buttons *ngIf="mastercontrol.controlid != 'new'">
+      <button  ion-button round (click)="editMasterControl()">
+      <ion-icon name="paper"></ion-icon> Control</button>
+      <button  ion-button round (click)="showConfirmDelete()" color="danger">
+      <ion-icon name="trash"></ion-icon> Control</button>
+    </ion-buttons>
+     <button *ngIf="mastercontrol.controlid==='new'" ion-button round (click)="addMasterControl()">
+     <ion-icon name="add"></ion-icon> Control</button>
+  </div>
 </div>
 
 <button ion-button round (click)="editFarm()" block [disabled]="!formCtrl.form.valid">Save</button>
