--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -10,13 +10,8 @@
     <ion-title>Account Info.</ion-title>
 
     <ion-buttons end>
-    
-      <button ion-button icon-only *ngIf="settings.typeofuser==='Admin'" (click)="allCrops()">
-        <ion-icon name="flower"></ion-icon>
-      </button>
-
       <button ion-button icon-only *ngIf="!edit" (click)="enable()">
-        <ion-icon name="paper"></ion-icon>
+        <ion-icon name="build"></ion-icon>
       </button>
     </ion-buttons>
 
