Settings with subscription

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -44,7 +44,7 @@
   </ion-item>
   <ion-item>
      <ion-label stacked>Username</ion-label>
-     <ion-input type="text" [(ngModel)]="settings.username" name="userName" required ></ion-input>
+     <ion-input type="text" [(ngModel)]="username" name="userName" required ></ion-input>
   </ion-item>
   <ion-item>
      <ion-label stacked>Email</ion-label>
