--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' 'unsafe-inline' *; object-src 'self'; style-src 'self' 'unsafe-inline'; media-src *">
 
-  <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/hoja  h20 crop.png">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
 
- <script src="http://maps.google.com/maps/api/js?key=AIzaSyC8_aehwvta0ATqFTuk6706EdMko_cLIEQ"></script>
+ 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -26,6 +26,7 @@
     }
   </script>-->
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9MA5GNtG8dy-dkgNGQVLnzvn9UKSb4DY"></script>
   <link href="build/main.css" rel="stylesheet">
 
 </head>
@@ -39,6 +40,8 @@
 
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+
+
 
 </body>
 </html>
