--- a/src/pages/crop-history/crop-history.html
+++ b/src/pages/crop-history/crop-history.html
@@ -33,7 +33,7 @@
     </ion-card-header>
     <ion-card-content>
 
-      <ion-list>
+      <ion-list ng-style="{'line-height': '250px'}">
         <ion-row>
           <ion-col class="six" *ngFor="let header of headers">{{header}}</ion-col>
         </ion-row>
