--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,4 +1,5 @@
 <ion-content class="login-content" padding>
+  <ion-icon ios="ios-information-circle" md="md-information-circle" (click)="info()"></ion-icon>
   <ion-row class="logo-row">
     <ion-col></ion-col>
     <ion-col width-67>
